--- a/locacaoespaco_fe/package.json
+++ b/locacaoespaco_fe/package.json
@@ -14,9 +14,6 @@
     "next": "14.2.6"
   },
   "devDependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "^16.0.0",
     "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -24,9 +21,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.6",
-    "jest": "^29.7.0",
-    "jest-dom": "^4.0.0",
-    "ts-jest": "^29.2.4"
+    "eslint-config-next": "14.2.6"
   }
 }
