--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/react-stars": "^2.2.4",
+    "embla-carousel": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-star-ratings": "^2.3.0"
+    "react-star-ratings": "^2.3.0",
+    "react-stars": "^2.2.5"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
