--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
     "embla-carousel-react": "^8.2.0",
     "next": "14.2.6",
     "react": "^18",
-    "react-dom": "^18",
-    "react-star-ratings": "^2.3.0",
-    "react-stars": "^2.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -27,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "jest": "^29.7.0",
