--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/josefin-sans": "^5.0.21",
     "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18",
