--- a/package.json
+++ b/package.json
@@ -14,18 +14,23 @@
     "@types/next": "^9.0.0",
     "embla-carousel": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
+    "leaflet": "^1.9.4",
     "next": "14.2.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.0",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^22.5.1",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@types/react-leaflet": "^3.0.0",
     "@types/react-modal": "^3.16.3",
     "aria-query": "^5.3.0",
     "eslint": "8.57.0",
