--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "embla-carousel": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.438.0",
     "next": "14.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-swipeable": "^7.0.1"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
