Tabela de reservas da págiana gerenciar reservas

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,10 +12,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "downlevelIteration": true,
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.config.ts", "jest.setup.ts", "jest.d.ts"],
   "exclude": ["node_modules"]
 }
