--- a/package.json
+++ b/package.json
@@ -2,25 +2,44 @@
   "name": "locacaoespaco_fe",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.6"
+    "@types/next": "^9.0.0",
+    "embla-carousel": "^8.2.0",
+    "embla-carousel-react": "^8.2.0",
+    "leaflet": "^1.9.4",
+    "next": "14.2.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.0",
+    "@types/leaflet": "^1.9.12",
+    "@types/node": "^22.5.1",
+    "@types/react": "^18.3.4",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-leaflet": "^3.0.0",
+    "@types/react-modal": "^3.16.3",
+    "aria-query": "^5.3.0",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.7",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "postcss": "^8.4.41",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.6"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
