--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1"
   },
