--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-config-next": "14.2.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "next-router-mock": "^0.9.13",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
