--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "locacaoespaco_fe": "file:",
     "next": "14.2.6",
     "react": "^18",
