--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@types/next": "^9.0.0",
+    "date-fns": "^4.1.0",
     "embla-carousel": "^8.2.0",
     "embla-carousel-react": "^8.2.0",
     "leaflet": "^1.9.4",
@@ -28,6 +29,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@types/date-fns": "^2.5.3",
     "@types/jest": "^29.5.0",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^22.5.1",
