--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.3",
     "@types/next": "^9.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel": "^8.2.0",
