--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
-    "next": "14.2.6",
+    "locacaoespaco_fe": "file:",
+    "next": "^14.2.6",
     "react": "^18",
     "react-dom": "^18",
     "zustand": "^5.0.0-rc.2"
