Finalizada a página de solicitar reserva. Ainda falta a validação do design e textos

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.config.ts", "jest.setup.ts", "jest.d.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.config.ts", "jest.setup.ts", "jest.d.ts", "src/pages/anuncio/exportRoutes.js"],
   "exclude": ["node_modules"]
 }
